@@ -1,3 +1,9 @@
+2011-11-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/ralloc2.cc,
+	  support/regression/tests/bug3444293.c:
+	  Fixed bug #3444293.
+
 2011-11-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* support/regression/tests/bug3440327.c:
